--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-here is the html part
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>one</title>
+</head>
+<body>
+    <h1>helllo joe</h1>
+</body>
+</html>
